[package]
name = "rust-macho-test"
version = "0.1.0"
authors = ["David Weinstein <dweinst@insitusec.com>"]

[dependencies]
mach_object = { git = "https://github.com/flier/rust-macho.git" }
failure = "0.1"
byteorder = "1.0"
slog = { version = "2", features = ["max_level_trace"] }
slog-bunyan = "2.1.0"
slog-stdlog = "3"
hex = "0.3.2"
ring = "*"
hexdump = "0.1.0"
